--- a/cams/counting_rectangles/count_rectangles_comparing_architectures-152.ipynb
+++ b/cams/counting_rectangles/count_rectangles_comparing_architectures-152.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 32 ms, sys: 6.3 ms, total: 38.3 ms\n",
-      "Wall time: 1.78 s\n"
+      "CPU times: user 150 ms, sys: 19.9 ms, total: 170 ms\n",
+      "Wall time: 12.8 s\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,22 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15680000"
+       "39200000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "NUMBER_OF_SAMPLES = 20_000\n",
+    "NUMBER_OF_SAMPLES = 50_000\n",
     "SIZE = 224 // 8 \n",
     "MAGNIFICATION = 8\n",
     "INSETS = 2\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,15 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 844 ms, sys: 110 ms, total: 954 ms\n",
-      "Wall time: 957 ms\n"
+      "CPU times: user 2.2 s, sys: 147 ms, total: 2.35 s\n",
+      "Wall time: 2.35 s\n"
      ]
     }
    ],
@@ -156,6 +156,14 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet152-b121ed2d.pth\" to /home/ec2-user/.torch/models/resnet152-b121ed2d.pth\n",
+      "241530880it [00:27, 8729830.02it/s] \n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "\n",
@@ -172,8 +180,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='16' class='' max='100', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      16.00% [16/100 25:08<2:12:01]\n",
+       "      <progress value='0' class='' max='3', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.00% [0/3 00:00<00:00]\n",
        "    </div>\n",
        "    \n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -186,102 +194,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>10048.132812</td>\n",
-       "      <td>4074.166748</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>151.208176</td>\n",
-       "      <td>16.570572</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>9.422197</td>\n",
-       "      <td>7.516503</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>7.023949</td>\n",
-       "      <td>4.958220</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>6.345302</td>\n",
-       "      <td>4.171494</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>9.134933</td>\n",
-       "      <td>8.526339</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>6.621506</td>\n",
-       "      <td>5.854495</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>7.115788</td>\n",
-       "      <td>6.556200</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>6.376125</td>\n",
-       "      <td>4.018526</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>7.466993</td>\n",
-       "      <td>3.269773</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>8.255520</td>\n",
-       "      <td>5.020361</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>6.899898</td>\n",
-       "      <td>12.482038</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>7.324053</td>\n",
-       "      <td>2.502986</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>7.656272</td>\n",
-       "      <td>6.628376</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>9.281704</td>\n",
-       "      <td>3.116618</td>\n",
-       "      <td>01:33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>8.797837</td>\n",
-       "      <td>10.530210</td>\n",
-       "      <td>01:34</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>\n",
        "\n",
@@ -298,8 +210,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='94' class='' max='228', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      41.23% [94/228 00:35<00:50 9.7680]\n",
+       "      <progress value='114' class='' max='571', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      19.96% [114/571 00:45<03:00 21009.5020]\n",
        "    </div>\n",
        "    "
       ],
@@ -314,8 +226,8 @@
    "source": [
     "runs = []\n",
     "\n",
-    "for (epochs, architecture, bs) in [(100, models.resnet152, 70)]:\n",
-    "    runs += [(epochs, 4e-2, 384, bs, architecture,  str(architecture).split()[1])] \n",
+    "for (epochs, architecture, bs) in [(3, models.resnet152, 70)]:\n",
+    "    runs += [(epochs, 3e-2, 384, bs, architecture,  str(architecture).split()[1])] \n",
     "\n",
     "losses = []\n",
     "\n",
@@ -340,6 +252,54 @@
     "\n",
     "    losses += [(label, model.recorder.losses, model.recorder.val_losses)]\n",
     "    model.save('x'+label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels, train_losses, val_losses = [], [], []\n",
+    "for (label, train_loss, val_loss) in losses:\n",
+    "    labels += [label]\n",
+    "    train_losses += [train_loss[-1].item()]\n",
+    "    val_losses   += [val_loss[-1].item()]\n",
+    "\n",
+    "results = pd.DataFrame()\n",
+    "results['label'] = np.array(labels, dtype=np.str)\n",
+    "\n",
+    "results['train_loss'] = np.array(train_losses, dtype=np.float32)\n",
+    "results['val_loss'] = np.array(val_losses, dtype=np.float32)\n",
+    "results.sort_values(by='val_loss', inplace=True)\n",
+    "display(results)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_bunch = ll.databunch(bs=bs)\n",
+    "data_bunch = data_bunch.normalize(imagenet_stats)\n",
+    "#model = cnn_learner(data_bunch, architecture, ps=0, true_wd = False, bn_wd = False, callback_fns=[CSVLogger])\n",
+    "model.fit_one_cycle(5, slice(lr), wd=0)\n",
+    "model.recorder.plot_losses()\n",
+    "plt.yscale('log')\n",
+    "plt.title(label)\n",
+    "\n",
+    "model.recorder.plot_losses()\n",
+    "plt.yscale('log')\n",
+    "plt.ylim(0,10)\n",
+    "plt.title(label)\n",
+    "\n",
+    "model.recorder.plot_losses()\n",
+    "plt.ylim(0,3)\n",
+    "plt.title(label)\n",
+    "\n",
+    "losses += [(label, model.recorder.losses, model.recorder.val_losses)]\n",
+    "model.save('x2'+label)"
    ]
   },
   {
