--- a/cs224nw2017/a1/exploring_word_vectors.ipynb
+++ b/cs224nw2017/a1/exploring_word_vectors.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,39 @@
      "text": [
       "Solving environment: ...working... done\n",
       "\n",
-      "# All requested packages already installed.\n",
-      "\n"
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /home/ec2-user/anaconda3/envs/python3\n",
+      "\n",
+      "  added / updated specs: \n",
+      "    - gensim\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    openssl-1.0.2r             |       h7b6447c_0         3.2 MB\n",
+      "    smart_open-1.8.0           |           py36_0          70 KB\n",
+      "    gensim-3.4.0               |   py36h14c3975_0        21.5 MB\n",
+      "    certifi-2019.3.9           |           py36_0         155 KB\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:        24.9 MB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "    gensim:          3.4.0-py36h14c3975_0             \n",
+      "    smart_open:      1.8.0-py36_0                     \n",
+      "\n",
+      "The following packages will be UPDATED:\n",
+      "\n",
+      "    ca-certificates: 2018.11.29-ha4d7672_0 conda-forge --> 2019.1.23-0      \n",
+      "    certifi:         2018.11.29-py36_1000  conda-forge --> 2019.3.9-py36_0  \n",
+      "    openssl:         1.0.2p-h14c3975_1002  conda-forge --> 1.0.2r-h7b6447c_0\n",
+      "\n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... done\n"
      ]
     }
    ],
@@ -33,36 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(sys.version_info(major=3, minor=6, micro=5, releaselevel='final', serial=0),\n",
-       " (3, 6))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(sys.version_info, sys.version_info[0:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package reuters to /home/ec2-user/nltk_data...\n",
-      "[nltk_data]   Package reuters is already up-to-date!\n"
+      "[nltk_data] Downloading package reuters to /home/ec2-user/nltk_data...\n"
      ]
     }
    ],
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -359,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +601,7 @@
     "        # ------------------\n",
     "        # Write your implementation here.\n",
     "    \n",
-    "    \n",
+    "    M_reduced = TruncatedSVD(n_components=k, n_iter=n_iters).fit_transform(M)\n",
     "        # ------------------\n",
     "\n",
     "    print(\"Done.\")\n",
@@ -601,9 +610,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Truncated SVD over 10 words...\n",
+      "Done.\n",
+      "--------------------------------------------------------------------------------\n",
+      "Passed All Tests!\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------\n",
     "# Run this sanity check\n",
